--- a/src/sections/nuestrosTrabajos/nuestrosTrabajos.css
+++ b/src/sections/nuestrosTrabajos/nuestrosTrabajos.css
@@ -38,7 +38,6 @@ ESTILOS PARA EL CARRUSEL DE TRABAJOS
   width: 100%;
   height: 100%;
   overflow: hidden;
-
 }
 
 /* Título de la imagen (encima de la imagen) */
@@ -52,7 +51,6 @@ ESTILOS PARA EL CARRUSEL DE TRABAJOS
   z-index: 2;
   margin: 0;
   font-family: "Bebas", sans-serif;
-
 }
 
 /* Contenedor para la marca de agua */
@@ -80,7 +78,6 @@ ESTILOS PARA EL CARRUSEL DE TRABAJOS
   height: 100%;
   object-fit: cover;
   transition: all 0.3s ease;
-
 }
 
 /* Capa negra (aparece encima de la imagen) */
@@ -97,7 +94,7 @@ ESTILOS PARA EL CARRUSEL DE TRABAJOS
 
 /* Efecto de hover (eliminar capa negra) */
 .swiper-slide:hover .overlay {
-  opacity: .3;
+  opacity: 0.3;
 }
 
 /* Efecto de hover para la imagen */
@@ -120,9 +117,24 @@ ESTILOS PARA EL CARRUSEL DE TRABAJOS
 /* ============================
 MEDIA QUERIES
 ============================ */
-@media (max-width:768px) {
+@media (max-width: 768px) {
   .swiper-button-next,
   .swiper-button-prev {
-    transform: scale(.7);
+    transform: scale(0.7);
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.225);
+    transition: opacity 0.3s ease;
+    z-index: 1;
+  }
+  .swiper-slide:hover .slide-image {
+    transform: scale(1);
+    /* Un pequeño zoom para la imagen */
   }
 }
