--- a/src/sections/home/Home.css
+++ b/src/sections/home/Home.css
@@ -3,20 +3,9 @@ OPCIONES GENERALES
 ============================*/
 .home {
   position: relative;
-  z-index: 1;
   height: 100vh;
   width: 100%;
-}
-
-.home::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2));
-  z-index: -1;
+  overflow: hidden;
 }
 
 .home::after {
@@ -26,12 +15,49 @@ OPCIONES GENERALES
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/assets/Fondo/fondo_inicio.jpeg');
+  background-image: var(--fondo-dinamico);
   background-size: cover;
   background-position: bottom;
   transform: scaleX(-1);
   z-index: -2;
+  transition: background-image 1s ease-in-out;
 }
+
+.fondo-img,
+.fondo-img-fade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transform: scaleX(-1);
+  transition: opacity 1s ease-in-out;
+  z-index: -2;
+}
+
+.fondo-img-fade {
+  opacity: 0;
+  z-index: -1;
+}
+
+.fondo-img-fade.mostrar {
+  opacity: 1;
+}
+
+.overlay-capa {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+  transition: background 0.5s ease-in-out;
+}
+
+
 
 /* ============================
 OPCIONES DE CONTENIDO
@@ -65,9 +91,6 @@ MEDIA QUERIES
     flex-direction: column;
     align-items: center;
   }
-}
-
-@media (max-width: 768px) {
 
   .home::before {
     content: '';
@@ -80,6 +103,20 @@ MEDIA QUERIES
     z-index: -1;
   }
 
+  .contenedor-home{
+    align-items: center;
+    gap: 8rem;
+  }
+
+  .contenido-home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  
   .boton-container {
     padding: 2rem 0;
     margin: 0 auto;
