--- a/src/sections/Beneficios/Beneficios.css
+++ b/src/sections/Beneficios/Beneficios.css
@@ -5,6 +5,7 @@ OPCIONES GENERALES
   height: 120vh;
   background-color: aliceblue;
   color: var(--negro-claro);
+  padding: 2rem 1rem;
 }
 
 /* ============================
@@ -14,7 +15,6 @@ ENCABEZADO
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 4rem;
 }
 
 .encabezado-beneficios h1 {
@@ -36,7 +36,6 @@ GALERIA DE FOTOS
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 0 1rem;
   /* padding izquierda y derecha */
   box-sizing: border-box;
   /* para que el padding no afecte el ancho */
@@ -49,8 +48,7 @@ TITULOS GALERIA
 .titulos-container {
   display: flex;
   justify-content: space-around;
-  padding-top: 6rem;
-  padding-bottom: 2rem;
+  
 }
 
 .titulo {
