--- a/src/sections/products/Products.css
+++ b/src/sections/products/Products.css
@@ -70,7 +70,7 @@ OPCIONES SUPERIOR IZQUIERDA (OBJETO 3D)
 
 .icono-productos {
   position: relative;
-  z-index: 101;
+  z-index: 22;
   /* más alto que .boton-centro-prueba (z-index: 11) */
   transition: fill 0.3s ease-in-out;
   cursor: pointer;
@@ -262,20 +262,21 @@ OPCIONES DERECHA (TEXTO)
 
 @media (max-width: 768px) {
   .seccion-productos{
-    height: 120vh;
+    height: 950px;
+    padding-bottom: 0;
   }
   .contenedor-superior-productos {
     flex-direction: column;
-    height: auto;
+    height: 800px;
   }
 
   .model-proyecto-container {
     height: 300px;
+    width: 250px;
   }
 
   .contenedor-izquierda,
   .contenedor-derecha {
-    flex: 0 0 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -288,7 +289,10 @@ OPCIONES DERECHA (TEXTO)
   }
 
   .contenedor-derecha{
-    padding-top: 0;
+    padding-top: 2rem;
+  }
+  .text-contenedor-productos{
+    height: 350px;
   }
 
   .contenedor-derecha h1 {
