--- a/src/sections/products/Products.css
+++ b/src/sections/products/Products.css
@@ -110,7 +110,8 @@ OPCIONES SUPERIOR DERECHA (TEXTO)
 }
 
 .text-productos h3 {
-  font-weight: 500;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 
