--- a/src/components/Footer/FooterDefault.css
+++ b/src/components/Footer/FooterDefault.css
@@ -1,7 +1,7 @@
 /* ===================================
 OPCIONES GENERALES
 ====================================*/
-footer {
+.footer-seccion {
   height: 45vh;
   max-width: 1250px;
   margin: 0 auto;
