--- a/src/sections/contacto/Contacto.css
+++ b/src/sections/contacto/Contacto.css
@@ -10,7 +10,8 @@ OPCIONES GENERALES
   background-attachment: fixed;
   display: flex;
   justify-content: center;
-  z-index: 1; /* Asegura que el contenido esté por encima del sombreado */
+  z-index: 1;
+  /* Asegura que el contenido esté por encima del sombreado */
 }
 
 .contacto-section::before {
@@ -20,8 +21,10 @@ OPCIONES GENERALES
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Opacidad del 50% */
-  z-index: -1; /* Mantener la capa debajo del contenido */
+  background: rgba(0, 0, 0, 0.5);
+  /* Opacidad del 50% */
+  z-index: -1;
+  /* Mantener la capa debajo del contenido */
 }
 
 .contacto-grid-container {
@@ -35,19 +38,20 @@ OPCIONES GENERALES
  OPCIONES GRID IZQUIERDA
  ================================= */
 .contacto-grid-izquierda {
-padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .contacto-grid-izquierda span {
   color: var(--verde-logo);
 }
+
 .contacto-grid-izquierda-info {
   display: flex;
   margin-top: 1rem;
   width: 100%;
 }
 
-.footer-indicacion{
+.footer-indicacion {
   color: var(--gris);
 }
 
@@ -56,7 +60,8 @@ padding-top: 2rem;
   background-color: var(--verde-logo);
   border: none;
 }
-.contacto-grid-izquierda-info > div {
+
+.contacto-grid-izquierda-info>div {
   line-height: 1rem;
   margin-left: 2rem;
   width: 100%;
@@ -66,11 +71,11 @@ padding-top: 2rem;
   text-transform: uppercase;
 }
 
-.contacto-grid-izquierda-info > div{
+.contacto-grid-izquierda-info>div {
   font-size: 1rem;
 }
 
-.contacto-grid-izquierda-info > div > div {
+.contacto-grid-izquierda-info>div>div {
   display: flex;
   gap: 0.5rem;
   align-items: center;
@@ -126,6 +131,7 @@ padding-top: 2rem;
   border-bottom: 1px solid var(--verde-claro);
   transition: all 400ms;
 }
+
 .input:hover {
   background-color: #424242;
   border: none;
@@ -153,6 +159,7 @@ padding-top: 2rem;
   box-shadow: 0 0 10px var(--verde-logo), 0 0 10px var(--verde-logo);
   color: white;
 }
+
 .btn:hover {
   background-color: var(--verde);
   box-shadow: none;
@@ -161,12 +168,19 @@ padding-top: 2rem;
 /*==================================
 MEDIA QUERIES
 ==================================*/
-@media (max-width: 1600px) and (min-width: 769px) {
+@media (max-width: 1600px) and (min-width: 768px) {
   .contacto-grid-container {
     display: flex;
     justify-content: space-around;
     width: 90%;
     align-items: center;
     padding: 0;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .contacto-section {
+    overflow: hidden;
   }
 }
