--- a/src/components/Botones/BotonInterrogacion.css
+++ b/src/components/Botones/BotonInterrogacion.css
@@ -20,8 +20,8 @@
     bottom: 120%;
     left: 100%;
     transform: translateX(-100%);
-    background-color: #ffffffdd;
-    color: #333;
+    background-color: #ffffffa2;
+    color: #333333;
     padding: 6px 10px;
     border-radius: 8px;
     white-space: nowrap;
@@ -34,5 +34,17 @@
 
 /* Mostrar tooltip SOLO cuando haces hover en el botón */
 .boton-interrogacion:hover .tooltip-mensaje {
-  opacity: 1;
+    opacity: 1;
+}
+
+.boton-interrogacion span {
+    font-size: 10px;
+}
+
+@media (max-width: 1024px) {
+    .boton-interrogacion span {
+        max-width: 300px;
+        width: 300px;
+        white-space: normal;
+    }
 }
