--- a/src/components/Navbar/NavbarDefault.css
+++ b/src/components/Navbar/NavbarDefault.css
@@ -58,6 +58,7 @@ OPCIONES DEL LOGO
 .navbar__logo img {
   width: 6.25rem;
   margin-left: 1rem;
+  cursor: pointer;
 }
 /* ===============================
 OPCIONES DEL MENU CENTRAL 
