Seguimos editando galeria, añadiendo el swiper

--- a/src/sections/galeria/Galeria.css
+++ b/src/sections/galeria/Galeria.css
@@ -1,35 +1,97 @@
 /* ============================
 OPCIONES PARA GALERIA
 ============================ */
-.galeria-section{
-    height: 100vh;
+.galeria-section {
+  height: 100vh;
+  padding-top: 3.5rem;
 }
 
 .backgroundTopGaleria {
-    position: relative; 
-    padding: 4rem 0;
-    height: 200px;
-    background-image: url(/assets/Fondo/fondoDerechaPersonalizarToldos.jpg);
-    background-position: center;
-    background-size: cover;
-    z-index: 0;
+  position: relative;
+  height: 250px;
+  background-image: url(/assets/Fondo/fondoDerechaPersonalizarToldos.jpg);
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
 }
 
 .backgroundTopGaleria::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); 
-    z-index: 1;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  z-index: 1;
+}
+
+.contenidoGaleria {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+.contenidoGaleria h2 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
+  font-weight: 400;
+}
+
+.contenidoGaleria p {
+  text-align: center;
+}
+
+.contenidoGaleria a {
+  text-decoration: none;
+  color: white;
+  text-shadow: none;
+}
+
+
+/* ============================
+OPCIONES CARRUSEL
+============================ */
+.carrusel-galeria-container{
+  height: 400px;
+}
+
+.swiper-galeria{
+  height: 100%;
+}
+
+.galeria-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.galeria-imagen {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.overlay-negro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* Opacidad ajustable */
+  z-index: 1;
 }
 
 
 /* ============================
 OPCIONES FOOTER GALERIA
 ============================ */
-.footerGaleria{
+.footerGaleria {
   background-image: url('/assets/Fondo/fondo_resto.png');
 }
