--- a/src/sections/PersonalizarToldos/PersonalizarToldos.css
+++ b/src/sections/PersonalizarToldos/PersonalizarToldos.css
@@ -11,8 +11,8 @@ OPCIONES GENERALES
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding-top: 5rem;
-    z-index: 1000;
+    /* padding-top: 5rem; */
+    z-index: 10000;
     animation: fondo-entrada 0.4s ease forwards;
 }
 
@@ -25,10 +25,8 @@ OPCIONES DEL CONTENIDO GENERAL
 ============================ */
 .popup-contenido-prueba {
     position: relative;
-    width: 90vw;
-    max-width: 90%;
-    height: 80vh;
-    max-height: 80vh;
+    width: 100vw;
+    height: 100vh;
     overflow-y: auto;
 
     display: flex;
