--- a/src/sections/PersonalizarToldos/PersonalizarToldos.css
+++ b/src/sections/PersonalizarToldos/PersonalizarToldos.css
@@ -11,7 +11,6 @@ OPCIONES GENERALES
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    /* padding-top: 5rem; */
     z-index: 10000;
     animation: fondo-entrada 0.4s ease forwards;
 }
@@ -44,8 +43,7 @@ CONTENEDOR IZQUIERDA
 ============================ */
 .contenido-PersonalizarToldos-izquierda {
     position: relative;
-    flex: 0 0 20%;
-    /* Ocupa el 20% */
+    flex: 0 0 20%;/* Ocupa el 20% */
     background-image: url('/assets/Fondo/fondoIzquierdaPersonalizarToldos.jpg');
     background-size: cover;
     background-position: bottom center;
